test/spec_vectors/store/fail/module_30.wat
(module (memory 1) (func $type-value-empty-in-br_if (i32.const 0) (block (br_if 0 (i32.const 0) (i32.store) (i32.const 1)))))